# aoc23

./: Cargo.toml  README.md
.github/workflows/: rust.yml
sample/: tenth-e.txt  tenth-f.txt
src/: lib.rs
src/fifteenth/: animation.rs  mod.rs  parser.rs
src/fifth/: animation.rs  mod.rs  parser.rs
src/fourteenth/: animation.rs  mod.rs
src/second/: animation.rs  mod.rs  parser.rs
src/sixteenth/: animation.rs  mod.rs
src/ten/: animation.rs  mod.rs
src/thirteenth/: animation.rs  mod.rs
