[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.23.0", features = ["debug-render-2d"] }
clap = { version = "4.4.10", features = ["derive"] }
derive_more = "0.99.17"
enum-iterator = "1.4.1"
euclid = "0.22.9"
indicatif = "0.17.7"
itertools = "0.12.0"
lazy_static = "1.4.0"
ndarray = "0.15.6"
nom = "7.0.0"
nom-supreme = "0.8.0"
num = "0.4.1"
rayon = "1.8.0"
termion = "2.0.3"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
indoc = "2.0.4"
rstest = "0.18.2"
